Fix link styling and icon spacing.
Also begin work on improving event view page.  WIP.

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -604,6 +604,10 @@ div.td_big {
 	white-space: nowrap;
 }
 
+.nowrap i.mdi {
+	padding-right: 5px !important;
+}
+
 .dialog.inline {
 	margin-top: 60px;
 	margin-bottom: 60px;
